<resources>
    <string name="app_name">포인트쉐어</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_popular_point_title">인기 포인트</string>
    <string name="main_btm_nav_my_point_title">마이 포인트</string>

    <!-- Home -->
    <string name="map_et_hint_search">어종,지역,닉네임 등으로 검색</string>

    <!-- Star -->
    <string name="star_tv_title">인기 포인트</string>

    <!-- Search -->
    <string name="sort_recommend">추천순</string>
    <string name="sort_regDate">최신순</string>

    <string name="img_error">이미지 로딩 오류</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>