<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_layout_search"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/map_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="0dp"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/map_et_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/map_et_search"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginEnd="17dp"
            android:paddingStart="16dp"
            android:hint="@string/map_et_hint_search"
            android:textColorHint="@color/shadow"
            android:textSize="13sp"
            android:background="@drawable/map_search_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/map_iv_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/map_search_icon_18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/map_et_search"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/search_layout_linear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/map_layout_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_result_rv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_compact"
            android:text="정렬"
            android:textAlignment="textEnd"
            android:textColor="@color/shadow"
            android:textSize="11sp" />




        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_sort_button_background"
                android:textColor="@drawable/search_sort_button_text_color"
                android:checked="true"
                android:text="@string/sort_recommend" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:background="@drawable/search_sort_button_background"
                android:textColor="@drawable/search_sort_button_text_color"
                android:text="@string/sort_regDate" />
        </RadioGroup>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout_linear"/>

</androidx.constraintlayout.widget.ConstraintLayout>